src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use '@angular/material' as mat;
@import './styles/theme';
@import './styles/typography';
@import './styles/dialog';
@import './styles/snackbar';
@import './styles/table';
@import './styles/scroll';
@import './styles/chips';
@import './styles/colour';
@import './styles/navbar';
@import './styles/chart';
@import './styles/entity';
@import './styles/forms';
@import './styles/expansion-theme';
@import './styles/diff';
@import './styles/error-page';

* {
  font-family: 'Roboto Flex', sans-serif;
}

html,
body {
  margin: 0;
  padding: 0;
}

.container {
  margin-top: 10px;
  margin-left: 30px;

  h1 {
    &.mat-headline-4 {
      margin: 32px 0 32px 0;
      font-weight: 500;
    }
  }

  .top-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 100%;
    margin-right: 2rem;
  }
}

.mat-toolbar.mat-primary {
  color: #fff;
}

.mat-mdc-tab-group {
  margin-right: 30px;

  .mat-mdc-tab-body {
    padding: 10px 30px;
  }

  &.distribution {
    .mat-mdc-tab-body {
      padding: 1rem 0;
    }
  }
}

.inline-fields {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.login-backdrop {
  backdrop-filter: blur(4px);
  background: #004926;
  height: 100%;
}

.mat-mdc-list-item-unscoped-content {
  display: flex;
  align-items: center;
  font-family: 'Roboto Flex', sans-serif !important;
}

app-browse-navigation,
app-groups-navigation {
  .mat-mdc-list-item-unscoped-content {
    display: flex;
    align-items: center;

    span {
      margin-left: 1rem;
    }
  }
}

.mat-table-margin {
  margin-right: 1.5rem;
}

.button-wrapper {

  a,
  button {
    .mdc-button__label {
      font-size: 14px;
      letter-spacing: initial;
    }
  }
}

.mdc-button__label {
  letter-spacing: initial;
}

.mat-mdc-select-min-line,
.mdc-list-item__primary-text {
  text-transform: capitalize !important;
}

.table-filter-panel {
  .mdc-list-item__primary-text {
    font-size: 14px !important;
  }
}

app-table-filter {
  .mat-mdc-select-value-text {
    font-size: 14px;
  }
}

.mat-column-state {
  text-transform: capitalize;
}

.hidden {
  display: none !important;
}

button {
  &.mat-mdc-mini-fab {
    &.smaller {
      width: 36px;
      height: 36px;

      mat-icon {
        width: 22px;
        font-size: 22px;
        height: 22px;
      }
    }
  }
}

.mat-mdc-list-base {
  .mdc-list-item__content {
    pointer-events: none !important;
  }
}

.mat-drawer-inner-container {
  overflow: auto !important;
}

.mat-mdc-list-item {
  &.active {
    .mdc-list-item__primary-text {
      color: rgba(0, 73, 38, 1);
      font-weight: 600;
    }
  }
}

.dropdown-menu {
  .dropdown-menu-body {

    a,
    button {
      span {
        &.mdc-button__label {
          display: flex;
          align-items: center;

          span {
            margin-left: 0.5rem;
            margin-top: 0.25rem;
          }
        }
      }
    }
  }

  .dropdown-menu-footer {
    button {
      span {
        &.mdc-button__label {
          display: flex;
          align-items: center;

          span {
            margin-left: 0.25rem;
          }
        }
      }
    }
  }
}

.title-larger {
  font-size: 18px;
  font-weight: 500;
}

